--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 @font-face {
   font-family: Poppins;
   src: url('/fonts/Poppins-SemiBold.ttf');
@@ -10,21 +15,7 @@
   font-weight: 700;
 }
 
-body {
-  background: #f0f5ff;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
-main {
-  max-width: 100%;
-  width: 56rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
 
 #hidden-renderer {
   opacity: 0;
